# vpn-bot-py

./: .gitignore  README.md  config.example.ini  main.py  pyproject.toml
conf/: __init__.py  conf.py
cron/: __init__.py  cron.py
db/: __init__.py  db.py
handler/: __init__.py  general.py  instruction.py  payment.py  reload.py  send.py  start.py
utils/: __init__.py  datetime.py  telegram.py
